Première et Deuxième variantes de règles finies